# Bdays

./: LICENSE  README.md  manage.py  pyproject.toml
bdays_project/: asgi.py  settings.py  urls.py  wsgi.py
